--- a/Step03_DataBase/WebContent/WEB-INF/web.xml
+++ b/Step03_DataBase/WebContent/WEB-INF/web.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
   <display-name>Step03_DataBase</display-name>
+  <!-- 프로젝트의 최상위 경로 요청에 대해 응답할 파일 목록 -->
+  <!-- 어떤 url을 쳤을때 굳이 치지않아도 보여지는 대문페이지. ex) naver.com만 쳐도  naver.com/index.html이 나온다는 뜻이다.-->
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -10,9 +12,10 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
+  <!-- jdbc/myoracle 이라는 이름의 Datasource(Connection) 설정 -->
   <resource-ref>
   	 <description>Oracle Datasource example</description>
-	 <res-ref-name>jdbc/myoracle</res-ref-name>
+	 <res-ref-name>jdbc/myoracle</res-ref-name>		<!-- Servers에 context.xml과 이름이 같아야 한다. -->
 	 <res-type>javax.sql.DataSource</res-type>
 	 <res-auth>Container</res-auth>
   </resource-ref>
